// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SectionCard > snapshot — danger severity (title + items) 1`] = `
<View
  style={
    {
      "gap": 4,
    }
  }
  testID="snap-danger"
>
  <Text
    accessibilityRole="header"
    style={
      [
        {
          "fontFamily": "Manrope-Bold",
          "fontSize": 14,
          "letterSpacing": 0.5,
          "textTransform": "uppercase",
        },
        {
          "color": "#dc2626",
        },
      ]
    }
  >
    Contraindications
  </Text>
  <Text
    style={
      [
        {
          "fontFamily": "Manrope",
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#111",
        },
        {
          "writingDirection": "ltr",
        },
      ]
    }
  >
    •
     
    Penicillin allergy
  </Text>
  <Text
    style={
      [
        {
          "fontFamily": "Manrope",
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#111",
        },
        {
          "writingDirection": "ltr",
        },
      ]
    }
  >
    •
     
    Severe renal impairment
  </Text>
</View>
`;

exports[`SectionCard > snapshot — default severity (title + text) 1`] = `
<View
  style={
    {
      "gap": 4,
    }
  }
>
  <Text
    accessibilityRole="header"
    style={
      [
        {
          "fontFamily": "Manrope-Bold",
          "fontSize": 14,
          "letterSpacing": 0.5,
          "textTransform": "uppercase",
        },
        {
          "color": "#666",
        },
      ]
    }
  >
    Mechanism of Action
  </Text>
  <Text
    style={
      [
        {
          "fontFamily": "Manrope",
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#111",
        },
        {
          "writingDirection": "ltr",
        },
      ]
    }
  >
    Inhibits bacterial cell wall synthesis by binding to penicillin-binding proteins.
  </Text>
</View>
`;
